--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -32,31 +32,33 @@
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg mt-2 navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand">Logo</a>
+                <a class="navbar-brand" href="#">
+                    <img src="../assets/images/Logo Amazing Events.png" class="logo" alt="Bootstrap" width="30" height="24">
+                  </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNavDropdown">
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav" id="nav_item">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Upcoming Events</a>
+                            <a class="nav-link" href="../pages/upcoming-events.html">Upcoming Events</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Past Events</a>
+                            <a class="nav-link" href="../pages/past-events.html">Past Events</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="../pages/contact.html">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Details</a>
+                            <a class="nav-link" href="../pages/details.html">Details</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Status</a>
+                            <a class="nav-link" href="../pages/stats.html">Status</a>
                         </li>
                     </ul>
                 </div>
