--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -1,118 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-    />
-    <link
-      href="https://getbootstrap.com/docs/5.3/assets/css/docs.css"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" />
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet" />
     <link rel="stylesheet" href="../css/styles.css" />
-  </head>
-  <body>
+</head>
+
+<body>
     <header class="container-form-img">
-      <form class="d-flex" role="search">
-        <img class="logo" src="../images/Logo Amazing Events.png" alt="" />
-      </form>
-      <ul class="nav justify-content-end">
-        <li class="nav-item">
-          <a class="nav-link" href="home.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="upcoming-events.html">Upcoming Events</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="past-events.html">Past Events</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" href="contact.html" aria-current="page"
-            >Contact</a
+        <form class="d-flex" role="search">
+            <img class="logo" src="../images/Logo Amazing Events.png" alt="" />
+        </form>
+        <ul class="nav justify-content-end">
+            <li class="nav-item">
+                <a class="nav-link" href="home.html">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="upcoming-events.html">Upcoming Events</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="past-events.html">Past Events</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" href="contact.html" aria-current="page">Contact</a
           >
         </li>
         <li class="nav-item">
           <a class="nav-link" href="details.html">Details</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="stats.html">Stats</a>
-        </li>
-      </ul>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="stats.html">Stats</a>
+            </li>
+        </ul>
     </header>
 
-    <footer class="bg-light text-center text-white">
-      <!-- Grid container -->
-      <div class="container p-12 pb-0">
-        <!-- Section: Social media -->
-        <section class="mb-4">
-          <section
-            class="text-start p-3"
-            style="background-color: rgba(0, 0, 0, 0.2)"
-          >
-            <div>
-              <!-- Facebook -->
-              <a
-                class="btn text-white btn-floating m-1"
-                style="background-color: #3b5998"
-                href="#!"
-                role="button"
-                ><i class="fab fa-facebook-f"></i
-              ></a>
+    <main>
+        <form class="container-fluid w-50 p-3">
+            <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Name</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
 
-              <!-- Twitter -->
-              <a
-                class="btn text-white btn-floating m-1"
-                style="background-color: #55acee"
-                href="#!"
-                role="button"
-                ><i class="fab fa-twitter"></i
-              ></a>
-
-              <!-- Google -->
-              <a
-                class="btn text-white btn-floating m-1"
-                style="background-color: #dd4b39"
-                href="#!"
-                role="button"
-                ><i class="fab fa-google"></i
-              ></a>
-
-              <!-- Instagram -->
-              <a
-                class="btn text-white btn-floating m-1"
-                style="background-color: #ac2bac"
-                href="#!"
-                role="button"
-                ><i class="fab fa-instagram"></i
-              ></a>
-
-              <!-- Linkedin -->
-              <a
-                class="btn text-white btn-floating m-1"
-                style="background-color: #0082ca"
-                href="#!"
-                role="button"
-                ><i class="fab fa-linkedin-in"></i
-              ></a>
-              <!-- Github -->
-              <a
-                class="btn text-white btn-floating m-1"
-                style="background-color: #333333"
-                href="#!"
-                role="button"
-                ><i class="fab fa-github"></i
-              ></a>
             </div>
-            © 2023
-          </section>
-        </section>
-        <!-- Section: Social media -->
-      </div>
+            <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+            </div>
+            <div class="mb-3">
+                <label for="floatingTextarea2" class="form-label">Message</label>
+                <textarea class="form-control" placeholder="Leave a message here" id="floatingTextarea2" style="height: 100px"></textarea>
+            </div>
+
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </main>
+
+    <footer class="bg-light text-center text-white">
+        <!-- Grid container -->
+        <div class="container p-12 pb-0">
+            <!-- Section: Social media -->
+            <section class="mb-4">
+                <section class="text-start p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+                    <div>
+                        <!-- Facebook -->
+                        <a class="btn text-white btn-floating m-1" style="background-color: #3b5998" href="#!" role="button"><i class="fab fa-facebook-f"></i
+              ></a>
+
+                        <!-- Twitter -->
+                        <a class="btn text-white btn-floating m-1" style="background-color: #55acee" href="#!" role="button"><i class="fab fa-twitter"></i
+              ></a>
+
+                        <!-- Google -->
+                        <a class="btn text-white btn-floating m-1" style="background-color: #dd4b39" href="#!" role="button"><i class="fab fa-google"></i
+              ></a>
+
+                        <!-- Instagram -->
+                        <a class="btn text-white btn-floating m-1" style="background-color: #ac2bac" href="#!" role="button"><i class="fab fa-instagram"></i
+              ></a>
+
+                        <!-- Linkedin -->
+                        <a class="btn text-white btn-floating m-1" style="background-color: #0082ca" href="#!" role="button"><i class="fab fa-linkedin-in"></i
+              ></a>
+                        <!-- Github -->
+                        <a class="btn text-white btn-floating m-1" style="background-color: #333333" href="#!" role="button"><i class="fab fa-github"></i
+              ></a>
+                    </div>
+                    © 2023
+                </section>
+            </section>
+            <!-- Section: Social media -->
+        </div>
     </footer>
-  </body>
+</body>
+
 </html>
