--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -9,13 +9,14 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" />
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/styles.css" />
 </head>
 
 <body>
     <header class="container-form-img">
         <form class="d-flex" role="search">
-            <img class="logo" src="../images/Logo Amazing Events.png" alt="" />
+            <img class="logo" src="../assets/images/Logo Amazing Events.png" alt="" />
         </form>
         <ul class="nav justify-content-end">
             <li class="nav-item">
@@ -28,11 +29,10 @@
                 <a class="nav-link" href="past-events.html">Past Events</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="contact.html" aria-current="page">Contact</a
-          >
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="details.html">Details</a>
+                <a class="nav-link active" href="contact.html" aria-current="page">Contact</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="details.html">Details</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="stats.html">Stats</a>
@@ -69,27 +69,28 @@
                 <section class="text-start p-3" style="background-color: rgba(0, 0, 0, 0.2)">
                     <div>
                         <!-- Facebook -->
-                        <a class="btn text-white btn-floating m-1" style="background-color: #3b5998" href="#!" role="button"><i class="fab fa-facebook-f"></i
-              ></a>
+                        <a class="btn text-white btn-floating m-1" style="background-color: #3b5998" href="#!" role="button"><i class="bi bi-facebook"></i>
+                        </a>
 
                         <!-- Twitter -->
-                        <a class="btn text-white btn-floating m-1" style="background-color: #55acee" href="#!" role="button"><i class="fab fa-twitter"></i
-              ></a>
+                        <a class="btn text-white btn-floating m-1" style="background-color: #55acee" href="#!" role="button"><i class="bi bi-twitter"></i>
+                        </a>
 
                         <!-- Google -->
-                        <a class="btn text-white btn-floating m-1" style="background-color: #dd4b39" href="#!" role="button"><i class="fab fa-google"></i
-              ></a>
+                        <a class="btn text-white btn-floating m-1" style="background-color: #dd4b39" href="#!" role="button"><i class="bi bi-google"></i>
+                        </a>
 
                         <!-- Instagram -->
-                        <a class="btn text-white btn-floating m-1" style="background-color: #ac2bac" href="#!" role="button"><i class="fab fa-instagram"></i
-              ></a>
+                        <a class="btn text-white btn-floating m-1" style="background-color: #ac2bac" href="#!" role="button"><i class="bi bi-instagram"></i>
+                        </a>
 
                         <!-- Linkedin -->
-                        <a class="btn text-white btn-floating m-1" style="background-color: #0082ca" href="#!" role="button"><i class="fab fa-linkedin-in"></i
-              ></a>
+                        <a class="btn text-white btn-floating m-1" style="background-color: #0082ca" href="#!" role="button"><i class="bi bi-linkedin"></i>
+                        </a>
+
                         <!-- Github -->
-                        <a class="btn text-white btn-floating m-1" style="background-color: #333333" href="#!" role="button"><i class="fab fa-github"></i
-              ></a>
+                        <a class="btn text-white btn-floating m-1" style="background-color: #333333" href="#!" role="button"><i class="bi bi-github"></i>
+                        </a>
                     </div>
                     © 2023
                 </section>
