--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -14,31 +14,37 @@
 </head>
 
 <body>
-    <header class="container-form-img">
-        <form class="d-flex" role="search">
-            <img class="logo" src="../assets/images/Logo Amazing Events.png" alt="" />
-        </form>
-        <ul class="nav justify-content-end">
-            <li class="nav-item">
-                <a class="nav-link" href="home.html">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="upcoming-events.html">Upcoming Events</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="past-events.html">Past Events</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" href="contact.html" aria-current="page">Contact</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="details.html">Details</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="stats.html">Stats</a>
-            </li>
-        </ul>
-    </header>
+    <nav class="navbar navbar-expand-lg bg-secondary bg-opacity-75 p-3" id="menu">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"><img src="../assets/images/Logo Amazing Events.png" alt="" class="img-fluid"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active " aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Upcoming events</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Past events</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Details</a>
+                    </li>
+                </ul>
+                <form class="d-flex ms-5" role="search">
+                    <input class="form-control me-2" type="email" placeholder="email" aria-label="email">
+                    <button class="btn btn-danger btn-danger-outline-danger" type="button">Suscribe</button>
+                </form>
+            </div>
+        </div>
+    </nav>
 
     <main>
         <form class="container-fluid w-50 p-3">
@@ -65,8 +71,8 @@
         <!-- Grid container -->
         <div class="container p-12 pb-0">
             <!-- Section: Social media -->
-            <section class="mb-4">
-                <section class="text-start p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+            <section class="mb-4 bg-secondary bg-opacity-75">
+                <section class="text-start p-3 text-white">
                     <div>
                         <!-- Facebook -->
                         <a class="btn text-white btn-floating m-1" style="background-color: #3b5998" href="#!" role="button"><i class="bi bi-facebook"></i>
@@ -98,6 +104,8 @@
             <!-- Section: Social media -->
         </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 
 </html>
