--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -27,16 +27,19 @@
                             <a class="nav-link active " aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Upcoming events</a>
+                            <a class="nav-link" href="./upcoming-events.html">Upcoming events</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Past events</a>
+                            <a class="nav-link" href="./past-events.html">Past events</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="./contact.html">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Details</a>
+                            <a class="nav-link" href="./details.html">Details</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./stats.html">Stats</a>
                         </li>
                     </ul>
                     <form class="d-flex ms-5" role="search">
