--- a/src/pages/past-events.html
+++ b/src/pages/past-events.html
@@ -24,19 +24,22 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active " aria-current="page" href="#">Home</a>
+                            <a class="nav-link active " aria-current="page" href="./home.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Upcoming events</a>
+                            <a class="nav-link" href="./upcoming-events.html">Upcoming events</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Past events</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="./contact.html">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Details</a>
+                            <a class="nav-link" href="./details.html">Details</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./stats.html">Stats</a>
                         </li>
                     </ul>
                     <form class="d-flex ms-5" role="search">
