--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -20,8 +20,8 @@
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img src="../assets/images/Logo Amazing Events.png" alt="" class="img-fluid"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
+            <span class="navbar-toggler-icon"></span>
+          </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="nav_item">
                         <li class="nav-item">
@@ -31,16 +31,16 @@
                             <a class="nav-link" href="./upcoming-events.html">Upcoming events</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./past-events.html">Past events</a>
+                            <a class="nav-link" href="./stats.html">Past events</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="./contact.html">Contact</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./details.html">Details</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./stats.html">Stats</a>
+                            <a class="nav-link" href="#">Stats</a>
                         </li>
                     </ul>
                     <form class="d-flex ms-5" role="search">
