--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link rel="shortcut icon" href="../assets/images/favicon-page.ico">
+    <link rel="shortcut icon" href="../assets/images/favicon-page.ico" />
 
     <link
       rel="stylesheet"
@@ -90,13 +90,16 @@
 
     <section class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <div
+          class="collapse navbar-collapse container-category"
+          id="navbarSupportedContent"
+        >
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 check-container">
             <li class="nav-item">
               <input type="checkbox" id="cbox2" value="second_checkbox" />
               <label for="cbox2">Category</label>
             </li>
-            
+
             <li class="nav-item dropdown">
               <input type="checkbox" id="cbox2" value="second_checkbox" />
               <label for="cbox2">Category</label>
@@ -119,7 +122,7 @@
             <input
               class="form-control me-2"
               type="search"
-              placeholder="Search"
+              placeholder=""
               aria-label="Search"
             />
             <button class="btn btn-outline-success" type="submit">
@@ -130,48 +133,54 @@
       </div>
     </section>
 
-    <div class="card" style="width: 18rem">
-      <img src="..." class="card-img-top" alt="..." />
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">
-          Some quick example text to build on the card title and make up the
-          bulk of the card's content.
-        </p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+    <div class="cards-container">
+      <div class="card" style="width: 18rem">
+        <img
+          src="/src/assets/images/Concierto de musica1.jpg"
+          class="card-img-top"
+          alt="..."
+        />
+        <div class="card-body">
+          <h5 class="card-title">Title</h5>
+          <p class="card-text">Description text</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
       </div>
-    </div>
-    <div class="card" style="width: 18rem">
-      <img src="..." class="card-img-top" alt="..." />
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">
-          Some quick example text to build on the card title and make up the
-          bulk of the card's content.
-        </p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+      <div class="card" style="width: 18rem">
+        <img
+          src="/src/assets/images/Cine7.jpg"
+          class="card-img-top"
+          alt="..."
+        />
+        <div class="card-body">
+          <h5 class="card-title">Title</h5>
+          <p class="card-text">Description text</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
       </div>
-    </div>
-    <div class="card" style="width: 18rem">
-      <img src="..." class="card-img-top" alt="..." />
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">
-          Some quick example text to build on the card title and make up the
-          bulk of the card's content.
-        </p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+      <div class="card" style="width: 18rem">
+        <img
+          src="/src/assets/images/Feria de comidas7.jpg"
+          class="card-img-top"
+          alt="..."
+        />
+        <div class="card-body">
+          <h5 class="card-title">Title</h5>
+          <p class="card-text">Description text</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
       </div>
-    </div>
-    <div class="card" style="width: 18rem">
-      <img src="..." class="card-img-top" alt="..." />
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">
-          Some quick example text to build on the card title and make up the
-          bulk of the card's content.
-        </p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+      <div class="card" style="width: 18rem">
+        <img
+          src="/src/assets/images/Maraton3.jpg"
+          class="card-img-top"
+          alt="..."
+        />
+        <div class="card-body">
+          <h5 class="card-title">Title</h5>
+          <p class="card-text">Description text</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
       </div>
     </div>
 
