images and home nav fix

--- a/src/pages/past-events.html
+++ b/src/pages/past-events.html
@@ -140,7 +140,27 @@
     <div class="cards-container">
       <div class="card" style="width: 18rem">
         <img
-          src="/src/assets/images/Concierto de musica1.jpg"
+          src="../assets/images/Concierto de musica1.jpg"
+          class="card-img-top"
+          alt="..."
+        />
+        <div class="card-body">
+          <h5 class="card-title">Title</h5>
+          <p class="card-text">Description text</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem">
+        <img src="../assets/images/Cine7.jpg" class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5 class="card-title">Title</h5>
+          <p class="card-text">Description text</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem">
+        <img
+          src="../assets/images/Feria de comidas7.jpg"
           class="card-img-top"
           alt="..."
         />
@@ -152,31 +172,8 @@
       </div>
       <div class="card" style="width: 18rem">
         <img
-          src="/src/assets/images/Cine7.jpg"
-          class="card-img-top"
-          alt="..."
-        />
-        <div class="card-body">
-          <h5 class="card-title">Title</h5>
-          <p class="card-text">Description text</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem">
-        <img
-          src="/src/assets/images/Feria de comidas7.jpg"
-          class="card-img-top"
-          alt="..."
-        />
-        <div class="card-body">
-          <h5 class="card-title">Title</h5>
-          <p class="card-text">Description text</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem">
-        <img
-          src="/src/assets/images/Maraton3.jpg"
+          src="..
+          /assets/images/Maraton3.jpg"
           class="card-img-top"
           alt="..."
         />
