--- a/src/pages/upcoming-events.html
+++ b/src/pages/upcoming-events.html
@@ -138,7 +138,7 @@
     <div class="cards-container">
       <div class="card" style="width: 18rem">
         <img
-          src="/src/assets/images/Fiesta de disfraces1.jpg"
+          src="../assets/images/Fiesta de disfraces1.jpg"
           class="card-img-top"
           alt="..."
         />
@@ -150,7 +150,7 @@
       </div>
       <div class="card" style="width: 18rem">
         <img
-          src="/src/assets/images/Salida al museo5.jpg"
+          src="../assets/images/Salida al museo5.jpg"
           class="card-img-top"
           alt="..."
         />
@@ -162,7 +162,7 @@
       </div>
       <div class="card" style="width: 18rem">
         <img
-          src="/src/assets/images/Feria de comidas7.jpg"
+          src="../assets/images/Feria de comidas7.jpg"
           class="card-img-top"
           alt="..."
         />
@@ -174,7 +174,7 @@
       </div>
       <div class="card" style="width: 18rem">
         <img
-          src="/src/assets/images/Maraton3.jpg"
+          src="../assets/images/Maraton3.jpg"
           class="card-img-top"
           alt="..."
         />
