past events image and redirect home past events

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -62,7 +62,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Past events</a>
+                <a class="nav-link" href="./past-events.html">Past events</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./contact.html">Contact</a>
