--- a/src/pages/past-events.html
+++ b/src/pages/past-events.html
@@ -172,8 +172,7 @@
       </div>
       <div class="card" style="width: 18rem">
         <img
-          src="..
-          /assets/images/Maraton3.jpg"
+          src="../assets/images/Maraton3.jpg"
           class="card-img-top"
           alt="..."
         />
