Modified and validated pages. The names of the images are changed since they had spaces.
Páginas modificadas y validadas. se cambian los nombres de las imagenes dado que tenian espacios y presentaba errores el validador.

--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -2,26 +2,30 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Contact</title>
     <link rel="shortcut icon" href="../assets/images/favicon-page.ico">
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" />
-    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-expand-lg bg-secondary bg-opacity-75 p-3" id="menu">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="../assets/images/Logo Amazing Events.png" alt="" class="img-fluid"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+                <a class="navbar-brand" href="#">
+                    <img src="../assets/images/LogoAmazingEvents.png" class="img-fluid" alt="Logo Amazing Events">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="nav_item">
                         <li class="nav-item">
@@ -61,12 +65,13 @@
             </div>
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <input type="email" class="form-control" id="exampleInputEmail2" aria-describedby="emailHelp">
                 <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
             </div>
             <div class="mb-3">
                 <label for="floatingTextarea2" class="form-label">Message</label>
-                <textarea class="form-control" placeholder="Leave a message here" id="floatingTextarea2" style="height: 100px"></textarea>
+                <textarea class="form-control" placeholder="Leave a message here" id="floatingTextarea2"
+                    style="height: 100px"></textarea>
             </div>
 
             <button type="submit" class="btn btn-primary">Submit</button>
@@ -76,42 +81,50 @@
     <footer class="bg-light text-center text-white">
         <!-- Grid container -->
         <div class="container p-12 pb-0">
-            <!-- Section: Social media -->
-            <section class="mb-4 bg-secondary bg-opacity-75">
-                <section class="text-start p-3 text-white">
+            <!-- div: Social media -->
+            <div class="mb-4 bg-secondary bg-opacity-75">
+                <div class="text-start p-3 text-white">
                     <div>
                         <!-- Facebook -->
-                        <a class="btn text-white btn-floating m-1" style="background-color: #3b5998" href="#!" role="button"><i class="bi bi-facebook"></i>
+                        <a class="btn text-white btn-floating m-1" style="background-color: #3b5998" href="#!"
+                            role="button"><i class="bi bi-facebook"></i>
                         </a>
 
                         <!-- Twitter -->
-                        <a class="btn text-white btn-floating m-1" style="background-color: #55acee" href="#!" role="button"><i class="bi bi-twitter"></i>
+                        <a class="btn text-white btn-floating m-1" style="background-color: #55acee" href="#!"
+                            role="button"><i class="bi bi-twitter"></i>
                         </a>
 
                         <!-- Google -->
-                        <a class="btn text-white btn-floating m-1" style="background-color: #dd4b39" href="#!" role="button"><i class="bi bi-google"></i>
+                        <a class="btn text-white btn-floating m-1" style="background-color: #dd4b39" href="#!"
+                            role="button"><i class="bi bi-google"></i>
                         </a>
 
                         <!-- Instagram -->
-                        <a class="btn text-white btn-floating m-1" style="background-color: #ac2bac" href="#!" role="button"><i class="bi bi-instagram"></i>
+                        <a class="btn text-white btn-floating m-1" style="background-color: #ac2bac" href="#!"
+                            role="button"><i class="bi bi-instagram"></i>
                         </a>
 
                         <!-- Linkedin -->
-                        <a class="btn text-white btn-floating m-1" style="background-color: #0082ca" href="#!" role="button"><i class="bi bi-linkedin"></i>
+                        <a class="btn text-white btn-floating m-1" style="background-color: #0082ca" href="#!"
+                            role="button"><i class="bi bi-linkedin"></i>
                         </a>
 
                         <!-- Github -->
-                        <a class="btn text-white btn-floating m-1" style="background-color: #333333" href="#!" role="button"><i class="bi bi-github"></i>
+                        <a class="btn text-white btn-floating m-1" style="background-color: #333333" href="#!"
+                            role="button"><i class="bi bi-github"></i>
                         </a>
                     </div>
                     © 2023
-                </section>
-            </section>
-            <!-- Section: Social media -->
+                </div>
+            </div>
+            <!-- div: Social media -->
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
