--- a/src/pages/details.html
+++ b/src/pages/details.html
@@ -18,7 +18,9 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-secondary bg-opacity-75 p-3" id="menu">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="../assets/images/Logo Amazing Events.png" alt="" class="img-fluid"></a>
+                <a class="navbar-brand" href="#">
+                    <img src="../assets/images/LogoAmazingEvents.png" class="img-fluid" alt="Logo Amazing Events">
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
