--- a/src/pages/stats.html
+++ b/src/pages/stats.html
@@ -2,24 +2,25 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Stats</title>
     <link rel="shortcut icon" href="../assets/images/favicon-page.ico">
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" />
-    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-expand-lg bg-secondary bg-opacity-75 p-3" id="menu">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="../assets/images/Logo Amazing Events.png" alt=""
-                        class="img-fluid"></a>
+                <a class="navbar-brand" href="#">
+                    <img src="../assets/images/LogoAmazingEvents.png" class="img-fluid" alt="Logo Amazing Events">
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -188,8 +189,8 @@
         <!-- Grid container -->
         <div class="container p-12 pb-0">
             <!-- Section: Social media -->
-            <section class="mb-4 bg-secondary bg-opacity-75">
-                <section class="text-start p-3 text-white">
+            <div class="mb-4 bg-secondary bg-opacity-75">
+                <div class="text-start p-3 text-white">
                     <div>
                         <!-- Facebook -->
                         <a class="btn text-white btn-floating m-1" style="background-color: #3b5998" href="#!"
@@ -222,8 +223,8 @@
                         </a>
                     </div>
                     © 2023
-                </section>
-            </section>
+                </div>
+            </div>
             <!-- Section: Social media -->
 
 
