--- a/src/pages/details.html
+++ b/src/pages/details.html
@@ -2,16 +2,16 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Details</title>
     <link rel="shortcut icon" href="../assets/images/favicon-page.ico">
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" />
-    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body>
@@ -87,9 +87,9 @@
     <footer class="bg-light text-center text-white">
         <!-- Grid container -->
         <div class="container p-12 pb-0">
-            <!-- Section: Social media -->
-            <section class="mb-4 bg-secondary bg-opacity-75">
-                <section class="text-start p-3 text-white">
+            <!-- div: Social media -->
+            <div class="mb-4 bg-secondary bg-opacity-75">
+                <div class="text-start p-3 text-white">
                     <div>
                         <!-- Facebook -->
                         <a class="btn text-white btn-floating m-1" style="background-color: #3b5998" href="#!" role="button"><i class="bi bi-facebook"></i>
@@ -116,9 +116,9 @@
                       </a>
                     </div>
                     © 2023
-                </section>
-            </section>
-            <!-- Section: Social media -->
+                </div>
+            </div>
+            <!-- div: Social media -->
         </div>
     </footer>
 </body>
