--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -35,7 +35,7 @@
                             <a class="nav-link" href="./upcoming-events.html">Upcoming events</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./stats.html">Past events</a>
+                            <a class="nav-link" href="past-events.html">Past events</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./contact.html">Contact</a>
@@ -44,7 +44,7 @@
                             <a class="nav-link" href="./details.html">Details</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Stats</a>
+                            <a class="nav-link" href="stats.html">Stats</a>
                         </li>
                     </ul>
                     <form class="d-flex ms-5" role="search">
