--- a/src/pages/past-events.html
+++ b/src/pages/past-events.html
@@ -34,7 +34,7 @@
               <a class="nav-link" href="./upcoming-events.html">Upcoming events</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Past events</a>
+              <a class="nav-link" href="past-events.html">Past events</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./contact.html">Contact</a>
