--- a/src/pages/upcoming-events.html
+++ b/src/pages/upcoming-events.html
@@ -31,7 +31,7 @@
               <a class="nav-link active" aria-current="page" href="./home.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Upcoming events</a>
+              <a class="nav-link" href="upcoming-events.html">Upcoming events</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./past-events.html">Past events</a>
