--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -154,42 +154,65 @@
           <div class="container">
             <div class="row">
               <div class="col-lg-3 col-sm-6">
-                <div class="card p-3">
-                  <img src="../assets/images/eventos_ejecutivos.jpg" class="w-100 h-100"  alt="">
-                </div>
-                <div class="card-body">
-                  <div class="card-title text-center">
-                    <div class="card-text text-center">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo repellendus, veniam laudantium vero
-                      neque ab totam ipsum corporis odit placeat necessitatibus! Itaque amet aliquid ipsam dolor aliquam
-                      at dignissimos assumenda.
-                      Est vitae ratione rerum nihil, ullam inventore fugit! Quasi praesentium ipsam quisquam et rerum
-                      velit. Reiciendis saepe, beatae fuga expedita eum cumque deleniti, animi sint, voluptas cupiditate
-                      nostrum illum ipsa.
-                      Ipsum porro unde ab reprehenderit corporis fugiat aliquam dolorem libero praesentium! Dolor
-                      reprehenderit laborum eius molestiae quos saepe neque accusamus iusto modi architecto voluptatem,
-                      ex ipsa quam. Perferendis, corrupti asperiores!
-                    </div>
-                    <div class="d-flex justify-content-between">
-                      <p class="card-text"> <small class="text-muted">Price $500</small></p>
-                      <a href="./details.html" class="btn btn-primnary float-right">View Details</a>
-                    </div>
+                <div class="card" >
+                  <img src="../assets/images/Conciertodemusica1.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Title</h5>
+                    <p class="card-text">Description text</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
                   </div>
                 </div>
+
+              </div>
+              <div class="col-lg-3 col-sm-6">
+                <div class="card" >
+                  <img src="../assets/images/Conciertodemusica1.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Title</h5>
+                    <p class="card-text">Description text</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+
+              </div>
+              <div class="col-lg-3 col-sm-6">
+                <div class="card" >
+                  <img src="../assets/images/Conciertodemusica1.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Title</h5>
+                    <p class="card-text">Description text</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+
+              </div>
+              <div class="col-lg-3 col-sm-6">
+                <div class="card" >
+                  <img src="../assets/images/Conciertodemusica1.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Title</h5>
+                    <p class="card-text">Description text</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators2" role="button" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Anterior</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators2" role="button" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Siguiente</span>
-    </a>
+  </div>
+  </div>
+
+  <a class="carousel-control-prev" href="#carouselExampleIndicators2" role="button" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Anterior</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators2" role="button" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Siguiente</span>
+  </a>
   </div>
   </div>
 
