--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -149,57 +149,8 @@
         <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
         <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
       </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-3 col-sm-6">
-                <div class="card" >
-                  <img src="../assets/images/Conciertodemusica1.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Title</h5>
-                    <p class="card-text">Description text</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                  </div>
-                </div>
-
-              </div>
-              <div class="col-lg-3 col-sm-6">
-                <div class="card" >
-                  <img src="../assets/images/Conciertodemusica1.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Title</h5>
-                    <p class="card-text">Description text</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                  </div>
-                </div>
-
-              </div>
-              <div class="col-lg-3 col-sm-6">
-                <div class="card" >
-                  <img src="../assets/images/Conciertodemusica1.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Title</h5>
-                    <p class="card-text">Description text</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                  </div>
-                </div>
-
-              </div>
-              <div class="col-lg-3 col-sm-6">
-                <div class="card" >
-                  <img src="../assets/images/Conciertodemusica1.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Title</h5>
-                    <p class="card-text">Description text</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                  </div>
-                </div>
-
-              </div>
-            </div>
-          </div>
-        </div>
+      <div class="carousel-inner" id="TemplateCardHome">
+      
       </div>
     </div>
   </div>
