--- a/src/pages/past-events.html
+++ b/src/pages/past-events.html
@@ -137,39 +137,8 @@
             </div>
         </div>
 
-        <div class="cards-container">
-            <div class="card" style="width: 18rem">
-                <img src="../assets/images/Conciertodemusica1.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Title</h5>
-                    <p class="card-text">Description text</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem">
-                <img src="../assets/images/Cine7.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Title</h5>
-                    <p class="card-text">Description text</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem">
-                <img src="../assets/images/Feriadecomidas7.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Title</h5>
-                    <p class="card-text">Description text</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem">
-                <img src="../assets/images/Maraton3.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Title</h5>
-                    <p class="card-text">Description text</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
+        <div class="cards-container--pastEvents" id="cards-container--pastEvents">
+            
         </div>
 
 
@@ -215,6 +184,7 @@
                 $('[data-toggle="tooltip"]').tooltip();
             });
         </script>
+         <script src="../scripts/events.js"></script>
 
 </body>
 
