--- a/src/pages/upcoming-events.html
+++ b/src/pages/upcoming-events.html
@@ -135,39 +135,8 @@
             </div>
         </div>
 
-        <div class="cards-container">
-            <div class="card" style="width: 18rem">
-                <img src="../assets/images/Fiestadedisfraces1.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Title</h5>
-                    <p class="card-text">Description text</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem">
-                <img src="../assets/images/Salidaalmuseo5.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Title</h5>
-                    <p class="card-text">Description text</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem">
-                <img src="../assets/images/Feriadecomidas7.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Title</h5>
-                    <p class="card-text">Description text</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem">
-                <img src="../assets/images/Maraton3.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Title</h5>
-                    <p class="card-text">Description text</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
+        <div class="cards-container--upComingEvents" id="cards-container--upComingEvents">
+            
         </div>
 
 
@@ -213,6 +182,7 @@
                 $('[data-toggle="tooltip"]').tooltip();
             });
         </script>
+         <script src="../scripts/events.js"></script>
 </body>
 
 </html>
