--- a/src/pages/details.html
+++ b/src/pages/details.html
@@ -67,7 +67,7 @@
                     <div class="img_event1">
                     </div>
                     <div class="carousel-caption top-0 mt-4 d-none d-md-block">
-                        <p class="display-1 fw-bolder text-capitalize text-warning">home</p>
+                        <p class="display-1 fw-bolder text-capitalize text-warning">Details</p>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -75,7 +75,7 @@
 
                     </div>
                     <div class="carousel-caption top-0 mt-4 d-none d-md-block">
-                        <p class="display-1 fw-bolder text-capitalize text-warning ">home</p>
+                        <p class="display-1 fw-bolder text-capitalize text-warning ">Details</p>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -83,7 +83,7 @@
 
                     </div>
                     <div class="carousel-caption top-0 mt-4 d-none d-md-block">
-                        <p class="display-1 fw-bolder text-capitalize text-warning ">home</p>
+                        <p class="display-1 fw-bolder text-capitalize text-warning ">Details</p>
                     </div>
                 </div>
             </div>
